t+ru:[[ветвь]] t+ru:[[ветка]] t+zh:[[支]] t-balance t+zh:[[樹枝]] t+zh:[[树枝]] t+hi:[[डाल]] t+ja:[[枝]] ([[WT:EDIT|Assisted]]) <branch#11458928>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -35,6 +35,8 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 *: Old Armenian: {{tø|xcl|ճիւղ|tr=čiwł|sc=Armn|xs=Old Armenian}}, {{tø|xcl|ոստ|tr=ost|sc=Armn|xs=Old Armenian}}, {{tø|xcl|կողր|tr=kołr|sc=Armn|xs=Old Armenian}}
 * Bosnian: {{t-|bs|grana|f}}
 * Bulgarian: {{t+|bg|клон|m}}
+* Chinese:
+*: Mandarin: {{t|zh|支|tr=zhī|sc=Hani}}, {{t|zh|樹枝|sc=Hani}}, {{t|zh|树枝|tr=shùzhī|sc=Hani}}
 * Croatian: {{t-|hr|grana|f}}
 * Czech: {{t-|cs|větev|f}}
 * Dutch: {{t+|nl|tak}}
@@ -45,19 +47,21 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 * German: {{t+|de|Ast|m}}, {{t+|de|Zweig|m}}
 * Greek: {{t+|el|κλαδί|n|tr=klaδí}},  {{t+|el|κλαρί|n|tr=klarí}}
 * Hebrew: {{t-|he|ענף|m|tr=anaf}}
+* Hindi: {{t|hi|डाल|f|tr=ḍāl|sc=Deva}}
 * Hungarian: {{t+|hu|ág}}
 * Italian: {{t+|it|ramo}}
+* Japanese: {{t|ja|枝|tr=えだ, eda|sc=Jpan}}
 * Kurdish: {{ku-Arab|[[چرۆ]]}}, {{ku-Arab|[[لق]]}}
+{{trans-mid}}
 * Latin: {{t-|la|ramus|alt=rāmus}}
 * Latvian: {{t-|lv|zars|m|xs=Latvian}}
-{{trans-mid}}
 * Lithuanian: {{t+|lt|šaka|f|xs=Lithuanian}}
 * [[Macedonian]]: {{t|mk|гранка|n|tr=grànka}}
 * Navajo: {{tø|nv|tsin bigaan}}
 * Polish: {{t+|pl|gałąź|f}}
 * Portuguese: {{t+|pt|galho|m}}, {{t|pt|ramo}}
 * Romanian: {{t+|ro|ram|n}}, {{t+|ro|ramură|f}}
-* Russian: {{t+|ru|ветвь|f}}, {{t+|ru|ветка|f}}
+* Russian: {{t+|ru|ветвь|f}}, {{t+|ru|ветка|f}}, {{t|ru|ветвь|f|tr=vetv’|sc=Cyrl}}, {{t|ru|ветка|f|tr=vétka|sc=Cyrl}}
 * [[Scots]]: {{tø|sco|beuch|xs=Scots}}
 * [[Scottish Gaelic]]: {{t-|gd|meur|f|xs=Scottish Gaelic}}
 * Serbian: [[грана]] (grana) {{f}}, [[вејка]] (vejka) {{f}} (leafless branch)
