--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -31,6 +31,7 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 
 ====Translations====
 {{trans-top|woody part of a tree arising from the trunk and usually dividing}}
+* Arabic: {{t|ar|فرع|m|tr=far3|sc=Arab}}
 * Armenian: {{t-|hy|ճյուղ|tr=č̣yuġ}}, {{t-|hy|ոստ|tr=ost}}
 *: Old Armenian: {{tø|xcl|ճիւղ|tr=čiwł|sc=Armn|xs=Old Armenian}}, {{tø|xcl|ոստ|tr=ost|sc=Armn|xs=Old Armenian}}, {{tø|xcl|կողր|tr=kołr|sc=Armn|xs=Old Armenian}}
 * Bosnian: {{t-|bs|grana|f}}
