--- a/en/c/caught.6831.wikitext
+++ b/en/c/caught.6831.wikitext
@@ -5,7 +5,7 @@
 *: {{rhymes|ɔːt}}
 * {{a|US}} {{IPA|/kɔt/}} 
 * {{a|cot-caught}} {{IPAchar|/kɑt/}}
-*{{audio|en-us-caught.ogg|Audio (US)}}
+*{{audio|en-us-caught.ogg|Audio (US cot-caught merged)}}
 *{{audio|en-us-inlandnorth-caught.ogg|Audio (US-Inland North)}}
 *{{audio|en-au-caught.ogg|Audio (Australia)}}
 *{{audio|en-uk-caught.ogg|Audio (UK)}}
