t+ja:[[真直ぐ]] t+hi:[[सीधा]] t-balance t+zh:[[直]] ([[WT:EDIT|Assisted]]) <straight#11468236>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -54,18 +54,21 @@
 {{trans-top|not crooked or bent}}
 * Armenian: {{t+|hy|ուղիղ|tr=uġiġ}}
 * [[Chamicuro]]: {{tø|ccc|nanatolo}}
+* Chinese:
+*: Mandarin: {{t|zh|直|tr=zhí|sc=Hani}}
 * Czech: {{t-|cs|přímý|m}}
 * Dutch: {{t+|nl|recht}}, {{t-|nl|rechte}}
 * Finnish: {{t+|fi|suora}}
 * French: {{t+|fr|droit|m}}, {{t+|fr|droite|f}},  {{t|fr|rectiligne}}
 * German: {{t+|de|gerade}}
 * Greek: {{t|el|ίσιος|m}} (ísios), {{t+|el|ευθύς|m}} (efthýs)
+* Hindi: {{t|hi|सीधा|tr=sīdhā|sc=Deva}}
 * Hungarian: {{t+|hu|egyenes}}
 * Icelandic: {{t+|is|beinn}}
+{{trans-mid}}
 * Irish: {{t-|ga|díreach|xs=Irish}}
 * Italian: {{t+|it|dritto}}
-{{trans-mid}}
-* Japanese: {{t|ja|真直ぐな|tr=massugu na}}
+* Japanese: {{t|ja|真直ぐな|tr=massugu na}}, {{t|ja|真直ぐ|tr=まっすぐな, massugu-na|alt=真直ぐな|sc=Jpan}}
 * Kurdish: {{ku-Arab|[[ڕێک]]}}
 * [[Macedonian]]: {{t-|mk|прав|m|tr=prav}}
 * Polish: {{t+|pl|prosty}}
