'founder' is better described as Anglo-Norman, Old French would be 'fonder/funder' <found#11469164>

--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -3,9 +3,10 @@
 ===Pronunciation===
 * {{IPA|/ˈfɑʊnd/}}
 * {{audio|en-us-found.ogg|Audio (US)}}
-*: {{rhymes|aʊnd}}
+* {{rhymes|aʊnd}}
 
 ===Etymology 1===
+see {{term|find|lang=en}}
 
 ====Verb====
 '''found'''
@@ -13,7 +14,7 @@
 # {{past of|[[find]]}}
 
 ===Etymology 2===
-From {{etyl|fro}} {{term|founder|lang=fro}} (French: {{term|fonder|lang=fr}}), from {{etyl|la}} {{term|fundare}}.
+From {{etyl|xno}} {{term|founder|lang=xno}} (French: {{term|fonder|lang=fr}}), from {{etyl|la}} {{term|fundare|lang=la}}.
 
 ====Verb====
 {{en-verb}}
@@ -23,7 +24,7 @@ From {{etyl|fro}} {{term|founder|lang=fro}} (French: {{term|fonder|lang=fr}}), f
 
 =====Translations=====
 {{trans-top|to begin building}}
-* Armenian: {{t|hy|հիմքը դնել|tr=himkʿë dnel}},  {{t|hy|հիմքը գցել|tr=himk’ë gc’el}}
+* Armenian: {{t|hy|հիմքը դնել|tr=himkʿë dnel}}, {{t|hy|հիմքը գցել|tr=himk’ë gc’el}}
 * Czech: {{t+|cs|založit}}
 * French: {{t+|fr|fonder}}
 * Italian: {{t|it|fondare}}
@@ -37,7 +38,7 @@ From {{etyl|fro}} {{term|founder|lang=fro}} (French: {{term|fonder|lang=fr}}), f
 {{trans-bottom}}
 
 {{trans-top|to start organization}}
-* Armenian: {{t|hy|հիմնադրել|tr=himnadrel}},  {{t-|hy|ստեղծել|tr=steġçel}},  {{t|hy|հիմնել|tr=himnel}}
+* Armenian: {{t|hy|հիմնադրել|tr=himnadrel}}, {{t-|hy|ստեղծել|tr=steġçel}}, {{t|hy|հիմնել|tr=himnel}}
 * Czech: {{t+|cs|založit}}
 * Dutch: {{t+|nl|stichten}}
 * Finnish: {{t+|fi|perustaa}}
@@ -77,7 +78,7 @@ From {{etyl|frm}} {{term|fondre|lang=frm}}.
 
 =====Translations=====
 {{trans-top|to melt}}
-* Armenian: {{t-|hy|ձուլել|tr=julel}},  {{t|hy|հալել|tr=halel}},  {{t-|hy|թափել|tr=t’ap’el}}
+* Armenian: {{t-|hy|ձուլել|tr=julel}}, {{t|hy|հալել|tr=halel}}, {{t-|hy|թափել|tr=t’ap’el}}
 * French: {{t+|fr|fondre}}
 {{trans-mid}}
 * Italian: {{t|it|fondere}}
