--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -79,6 +79,7 @@ From {{etyl|la}} {{term|Germania|lang=la}}, likely of Gallic origin
 * Maltese: il-[[Ġermanja]] {{f}}
 * [[Manx]]: [[y Ghiarmaan]]
 * Mongolian: {{t-|mn|Герман|tr=Germán|sc=Cyrl|xs=Mongolian}}
+* [[Nahuatl]]: {{t|nah|Teutontlālpan}}
 * Navajo: {{tø|nv|Béésh Bichʼahii bikéyah}}
 * Norwegian: {{t|no|Tyskland}}, {{t|no|Føderale Republikken Tyskland}}
 * [[Old English]]: {{t-|ang|Þeodiscland|n|alt=Þēodiscland|xs=Old English}}
