--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -240,7 +240,7 @@
 * Finnish: {{t+|fi|leikkiä}}
 * French: {{t+|fr|jouer}}
 * [[Galician]]: {{t-|gl|xogar|xs=Galician}}
-* {{trreq|ka}}
+* Georgian: {{t|ka|თამაში|tr=t'amaši|sc=Geor}}, {{t|ka|თამაშობა|tr=t'amašoba|sc=Geor}}
 * German: {{t+|de|spielen}}
 * {{trreq|el}}
 * Hebrew: {{t|he|שיחק|tr=sikhék}}, {{t|he|השתעשע|tr=hishta'ashéa}}
