--- a/en/b/bone marrow.7397.wikitext
+++ b/en/b/bone marrow.7397.wikitext
@@ -15,6 +15,7 @@
 * [[Catalan]]: {{t+|ca|bessó|m}}
 * Chinese:
 *: Mandarin: {{t|cmn|骨髓|tr=gǔsuǐ|sc=Hani}}
+* Czech: {{t|cs|kostní dřeň|f}}
 * Dutch: {{t+|nl|beenmerg|n}}
 * Esperanto: {{t|eo|osta medolo|xs=Esperanto}}
 * Finnish: {{t-|fi|luuydin}}
