--- a/en/昔/昔.16956.wikitext
+++ b/en/昔/昔.16956.wikitext
@@ -73,7 +73,7 @@
 
 ===Hanzi===
 {{cmn-hanzi|pin=[[xí]] ([[xi2]])|wg=hsi<sup>2</sup>}}
-#{{defn|lang=cmn|sort=日04}}
+#{{defn|lang=cmn|sort=日04}}, [[xī]], [[cuò]]
 
 ----
 
