--- a/en/昔/昔.16956.wikitext
+++ b/en/昔/昔.16956.wikitext
@@ -72,8 +72,8 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[xí]] ([[xi2]])|wg=hsi<sup>2</sup>}}
-#{{defn|lang=cmn|sort=日04}}, [[xī]], [[cuò]]
+{{cmn-hanzi|pin=[[xí]] ([[xi2]])|wg=hsi<sup>2</sup>}}, [[xī]], [[cuò]]
+#{{defn|lang=cmn|sort=日04}}
 
 ----
 
