--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -26,7 +26,6 @@
 #* '''1996''', Sabrina P Ramet, ''Gender reversals and gender cultures''
 #*: The rarity of male domination in fantasy '''play''' is readily explained.
 #* '''1996''', "toptigger", ''Palm Springs M seeks sane F 4 safe bdsm '''play''''' (on Internet newsgroup ''alt.personals.spanking.punishment'')
-# {{countable}} A [[button]] that, when [[press]]ed, causes media to be played.
 
 =====Synonyms=====
 * {{sense|literary composition}} [[drama]]
@@ -180,8 +179,6 @@
 * [[Macedonian]]: {{t-|mk|потег|m|tr=póteg}}
 * Swedish: {{t|sv|drag|n}}
 {{trans-bottom}}
-
-[[Category:Buttons]]
 
 ===Etymology 2===
 {{enm}} {{term|pleyen|lang=enm}}, from {{etyl|ang}} {{term|plegian|pleġian|lang=ang}}, frequentative of {{term|pleon|pleōn|to risk, endanger|lang=ang}}, from {{proto|Germanic|pleganan}} (compare West Frisian {{term|pleegje|lang=fy}}, Dutch {{term|plegen||to cimmit, practice|lang=nl}}, German {{term|pflegen||to tend, attend to|lang=de}}, perhaps from {{proto|Indo-European|bal-}} (compare Ancient Greek ''blyein, blýzein'' 'to gush out, spring', Sanskrit ''balbaliti'' 'it whirls, twirls').
@@ -543,12 +540,18 @@
 * [[word play]]/[[wordplay]]
 {{rel-bottom}}
 
+===Noun===
+{{en-noun}}
+
+# A [[button]] that, when [[press]]ed, causes media to be played.
+
 ===Statistics===
 * {{rank|London|save|length|580|play|remained|bear|service}}
 
 [[Category:1000 English basic words]]
 [[Category:English copulative verbs]]
 [[Category:English ergative verbs]]
+[[Category:Buttons]]
 
 ----
 
