/* English */ typo <vomit#11665176>

--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -3,7 +3,7 @@
 ==English==
 
 ===Etymology===
-From {{etyl|la}} ''[[vomitare]]'', present active infinitive of {{term|vomito|vomito|lang=la}}.
+From {{etyl|la}} {{term|vomitare|vomitāre|lang=la}}, present active infinitive of {{term|vomito|vomitō|vomit|lang=la}}.
 
 ===Pronunciation===
 * {{a|UK}} {{enPR|vŏm'ət}}, {{IPA|/ˈvɒmət/}}, {{SAMPA|/"vQm@t/}}
@@ -64,7 +64,7 @@ From {{etyl|la}} ''[[vomitare]]'', present active infinitive of {{term|vomito|vo
 {{en-noun|-}}
 
 # The [[regurgitate]]d former contents of a [[stomach]].
-# The act of of regurgitating.
+# The act of regurgitating.
 
 ====Synonyms====
 * See also [[Wikisaurus:vomit]].
