--- a/en/j/jeudi.1517.wikitext
+++ b/en/j/jeudi.1517.wikitext
@@ -27,7 +27,7 @@ From {{etyl|la|fr}} {{term|dies Iovis||day of Jupiter|lang=la}}.
 
 # [[Thursday]]
 
-====References=====
+====References====
 * {{R:Godefroy|supplement=1}}<!--contains a long list of alternative forms, too long to list here-->
 
 [[Category:fro:Days of the week]]
