ety link fix <choose#11715697>

--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia|Choice}}
 
 ===Etymology===
-{{etyl|enm}} ''chosen'', ''chesen'' from {{etyl|ang}} {{term|ceosan|ċēosan|lang=ang}}, eventually from {{proto|Germanic|keusanan|lang=en}}, from {{proto|Indo-European|geus-}}. Cognate with Norwegian [[kjosa]], Dutch [[kiezen]], Icelandic [[kjósa]], Gothic [[𐌺𐌹𐌿𐍃𐌰𐌽]] (kiusan).
+{{etyl|enm}} ''chosen'', ''chesen'' from {{etyl|ang}} {{term|ceosan|ċēosan|lang=ang}}, eventually from {{proto|Germanic|keusanan|lang=en}}, from {{proto|Indo-European|ǵeus-}}. Cognate with Norwegian [[kjosa]], Dutch {{term|kiezen|lang=nl}}, Icelandic {{term|kjósa|lang=is}}, Gothic {{term|𐌺𐌹𐌿𐍃𐌰𐌽|tr=kiusan|lang=got}}.
 
 ===Pronunciation===
 * {{enPR|cho͞oz}}, {{IPA|/tʃuːz/}}, {{SAMPA|/tSu:z/}}
