--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From {{etyl|fro}} ''[[coster]]'' (modern: ''[[coûter]]'').
+From {{etyl|fro}} {{term|coster|lang=fro}} (modern: {{term|coûter|lang=fr}}).
 
 ===Pronunciation===
 * {{a|RP}} {{IPA|/kɒst/}}
@@ -132,7 +132,7 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 ==Old English==
 
 ===Etymology===
-{{proto|Germanic|kus(t)-||lang=ang}} from {{proto|Indo-European|geus-|to choose|lang=ang}}. Akin to Old Saxon ''[[koston|kostōn]]'' "to try, tempt", O.H.G. ''[[koston|kostōn]]'' "to taste, test, try by tasting" (Ger ''[[kosten]]''), Icel. ''[[kosta]]'' "to try, tempt", Gothic ''kustus'' "test", Old English {{term|cystan||to spend, get the value of, procure|lang=ang}}, Old English {{term|cyst||proof, test, trial; choice|lang=ang}}, {{term|ceosan|ċēosan|to choose|lang=ang}}. More at [[choose]]
+{{proto|Germanic|kus(t)-||lang=ang}} from {{proto|Indo-European|ǵews-|to choose|lang=ang}}. Akin to Old Saxon {{term|koston|kostōn|to try, tempt|lang=osx}}, {{etyl|goh|-}} {{term|koston|kostōn|to taste, test, try by tasting|lang=goh}} (German {{term|kosten|lang=de}}), Icelandic {{term|kosta||to try, tempt|lang=is}}, {{etyl|got|-}} {{term|𐌺𐌿𐍃𐍄𐌿𐍃||test|tr=kustus|lang=got}}, Old English {{term|cystan||to spend, get the value of, procure|lang=ang}}, Old English {{term|cyst||proof, test, trial; choice|lang=ang}}, {{term|ceosan|ċēosan|to choose|lang=ang}}. More at [[choose]].
 
 ===Noun===
 {{ang-noun|g=m}}
