--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -120,7 +120,7 @@
 * Turkish: {{t+|tr|güzel}}
 * Ukrainian: {{t|uk|вродливий|tr=vrodlývyj|xs=Ukrainian}},  {{t|uk|красивий|tr=krasývyj|xs=Ukrainian}}
 * Urdu: {{t-|ur|خوبصورت|tr=xūbsūrat|xs=Urdu}}, {{t-|ur|سندر|tr=sundar|xs=Urdu}}
-* Vietnamese: {{t|vi|đẹp đẽ|xs=Vietnamese}},  {{t+|vi|tốt|xs=Vietnamese}},  {{t|vi|tốt đẹp|xs=Vietnamese}}
+* Vietnamese: {{t|vi|đẹp đẽ|xs=Vietnamese}},  {{t+|vi|tốt|xs=Vietnamese}},  {{t|vi|tốt đẹp|xs=Vietnamese}}, {{t|vi|đẹp}}
 * [[Volapük]]: {{t|vo|jönik}}
 * Welsh: {{t|cy|hardd|xs=Welsh}},  {{t|cy|prydferth|xs=Welsh}}
 * [[West Frisian]]: [[moai]], [[kreas]]
