--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -57,7 +57,7 @@
 * [[Azeri]]:
 *: Cyrillic: {{t-|az|гәшәнҝ|sc=Cyrl|xs=Azeri}}
 *: Roman: {{t-|az|qəşəng|xs=Azeri}}
-* Belarusian: {{t|be|выдатны|tr=vydántny|xs=Belarusian}}
+* Belarusian: {{t|be|выдатны|tr=vydátny|xs=Belarusian}}
 * [[Breton]]: [[brav]], [[kaer]]
 * Bulgarian: {{t+|bg|красив|tr=krasív}}, {{t+|bg|прекрасен|tr=prekrásen}}
 * [[Catalan]]: [[bell]], [[formós]],  {{t+|ca|bonic|m}},  {{t|ca|bonica|f}}
