t+ga:[[imir]] t-balance t+ga:[[seinn]] ([[WT:EDIT|Assisted]]) <play#11757897>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -250,14 +250,14 @@
 * Hungarian: {{t+|hu|játszik}}
 * Icelandic: {{t+|is|leika}}, {{t+|is|leika sér}}
 * [[Interlingua]]: {{t-|ia|jocar|xs=Interlingua}}
-* Irish: [[bí ag súgradh]]
+* Irish: [[bí ag súgradh]], {{t|ga|imir}}
 * Italian: {{t-|it|giocare}}
 * Japanese: {{t|ja|遊ぶ|tr=あそぶ, asobu|sc=Jpan}}
 * Korean: {{t|ko|놀다|tr=nolda|sc=Kore}}
 * Kurdish:
 *: Sorani: {{t|ku|یاری کردن|tr=yarí kirdin|sc=ku-Arab}}
-* Latin: {{t-|la|ludo}}
 {{trans-mid}}
+* Latin: {{t-|la|ludo}}
 * Lithuanian: {{t-|lt|žaisti|xs=Lithuanian}}
 * [[Macedonian]]: {{t-|mk|игра|tr=ígra}}
 * [[Old English]]: {{t-|ang|lacan|alt=lācan|xs=Old English}}
@@ -389,7 +389,7 @@
 * [[Galician]]: {{t-|gl|xogar|xs=Galician}}
 * Hungarian: {{t+|hu|játszik}}
 * Icelandic: {{t-|is|spila}}, {{t+|is|leika}}
-* Irish: [[imir]]
+* Irish: [[imir]], {{t|ga|imir}}
 * Kurdish:
 *: Sorani: {{t|ku|یاری کردن|tr=yarí kirdin|sc=ku-Arab}}
 {{trans-mid}}
@@ -419,6 +419,7 @@
 * Hungarian: {{t-|hu|lejátszik}}
 * Icelandic: {{t-|is|spila}}
 {{trans-mid}}
+* Irish: {{t|ga|seinn}}
 * Kurdish:
 *: Sorani: {{t|ku|لێدان|tr=lédan|sc=ku-Arab}}
 * [[Macedonian]]: {{t|mk|пушта|tr=púšta}}
