t+ja:[[反吐]] t+ja:[[戻す]] ([[WT:EDIT|Assisted]]) <vomit#11780151>

--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -38,7 +38,7 @@ From {{etyl|la}} {{term|vomitare|vomitāre|lang=la}}, present active infinitive 
 * Hebrew: {{t|he|להקיא}}
 * Hungarian: {{t+|hu|hány}}
 * Italian: {{t-|it|vomitare}}, {{t+|it|rimettere}}
-* Japanese: [[吐く]] ([[はく]], haku), [[嘔吐する]] ([[おうとする]], ōtosuru)
+* Japanese: [[吐く]] ([[はく]], haku), [[嘔吐する]] ([[おうとする]], ōtosuru), {{t|ja|戻す|tr=もどす, modosu|sc=Jpan}}
 {{trans-mid}}
 * Korean: [[게우다]] (geuda)<!--, [[토하다]] ([[吐]]-, to-hada)-->
 * Latin: {{t-|la|vomo}}, {{t-|la|vomito}}
@@ -84,6 +84,7 @@ From {{etyl|la}} {{term|vomitare|vomitāre|lang=la}}, present active infinitive 
 * Greek: {{t+|el|έμεσμα|n|tr=émesma}}
 * Hebrew: {{t|he|קא|tr=kei}}
 * Hungarian: {{t+|hu|hányás}},  {{t-|hu|hányadék}}
+* Japanese: {{t|ja|反吐|tr=へど, hedo|sc=Jpan}}
 * Kurdish: {{ku-Arab|[[ڕشانه‌وه‌]]}}
 {{trans-mid}}
 * Latvian: {{t|lv|vēmekļi|m|p}}
