--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -98,9 +98,12 @@ Alternate etymology connects {{frk}} *''blund'' to {{proto|Germanic|blundaz|blon
 * {{audio|Nl-blond.ogg|audio}}
 
 ===Adjective===
-'''blond''' (blonde)
+{{nl-adj}}
 
-# of light colour, usually said about light hair colour, but it can also refer to beer
+# of light colour {{gloss|usually said about light hair colour, but it can also refer to beer}}
+
+====Declension====
+{{nl-decl-adj}}
 
 ----
 
