--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -71,6 +71,7 @@ From {{etyl|fro}} {{term|coster|lang=fro}} (modern: {{term|coûter|lang=fr}}).
 * Czech: {{t-|cs|náklad|m}}, {{t+|cs|cena|f}}
 * Dutch: {{t+|nl|kost}}
 * Finnish: {{t+|fi|hinta}}, {{t+|fi|kustannus}}
+* French: {{t|fr|coût.|m}}
 * German: {{t+|de|Kosten|f|p}}
 * Greek: {{t+|el|κόστος|n|tr=kóstos}}, {{t+|el|δαπάνη|f|tr=dapáni}}, {{t+|el|τίμημα|n|tr=tímima}}, {{t+|el|αντίτιμο|n|tr=antítimo}}
 * Hebrew: [[עלות]] ('alut) {{f}}
@@ -96,6 +97,7 @@ From {{etyl|fro}} {{term|coster|lang=fro}} (modern: {{term|coûter|lang=fr}}).
 * Chinese: {{zh-ts|代價|代价}} (dàijìa)
 * Czech: {{t+|cs|cena|f}}
 * Finnish: {{t+|fi|hinta}}
+* French: {{t|fr|coût.|m}}
 * German: {{t+|de|Verlust|m}}, {{t+|de|Ausgaben|f}}
 * Greek: {{t+|el|κόστος|n|tr=kóstos}}
 * Japanese: {{t|ja|代償|tr=[[だいしょう]], daishō}}
