--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -124,6 +124,8 @@ From {{etyl|fro}} {{term|coster|lang=fro}} (modern: {{term|coûter|lang=fr}}).
 #:''This shirt '''costs''' $50, while this is cheaper at only $30.''
 #:''It will '''cost''' you a lot of money to take a round-the-world trip.''
 #:''Entry to the museums used to be free, but now it '''costs''' 5 pounds.''
+# To cause something to be lost.
+#:''Trying to rescue the man from the frozen lake '''cost''' me my health.''
 # To [[calculate]] or [[estimate]] a value.
 
 ====Usage notes====
