t+hu:[[bökkenő]] t-balance ([[WT:EDIT|Assisted]]) <catch#11807165>

--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -123,9 +123,10 @@ From {{etyl|enm|en}}, from {{etyl|xno|en}} {{term|cachier||lang=xno}}, from {{et
 * Bulgarian: {{t|bg|уловка|f}}
 * Dutch: {{t|nl|struikelblok|n}}, {{t|nl|valstrik|m}}
 * Finnish: {{t+|fi|koukku}}
-{{trans-mid}}
 * French: {{t|fr|hic|m}}
+{{trans-mid}}
 * Hebrew: {{t|he|עוקץ|m|tr='oqetz}}
+* Hungarian: {{t|hu|bökkenő}}
 * Italian: {{t-|it|trappola}}
 * Swedish: {{t+|sv|hake|c}}
 {{trans-bottom}}
