--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -82,6 +82,7 @@
 {{trans-bottom}}
 
 ====See also====
+* [[Appendix:Place names in Czech Republic]]
 * [[Appendix:Countries of the world]]
 
 [[Category:Czechia|*]]
