--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -74,7 +74,7 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 * [[speech]]
 
 ====Translations====
-{{trans-top}}
+{{ttbc-top}}
 * [[Afrikaans]]: {{t-|af|praat|xs=Afrikaans}}
 * Arabic: {{t|ar|تحدث|tr=taHáddatha}},  {{t|ar|تكلم|tr=takállama}}
 * Armenian: {{t+|hy|խոսել|tr=khosel}}
@@ -107,7 +107,7 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 * Latin: {{t+|la|dico|alt=dīcō}},  {{t-|la|fabulor|alt=fābulor}}, {{t+|la|loquor}}
 * Lithuanian: {{t+|lt|kalbėti|xs=Lithuanian}}
 * [[Macedonian]]: {{t|mk|зборува|tr=zboruva}}
-{{trans-mid}}
+{{ttbc-mid}}
 * Maltese: {{t|mt|tkellem}}
 * [[Nahuatl]]: [[tlatoa]]
 * [[Ngarrindjeri]]: {{tø|nay|kungun}}
