--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -171,6 +171,7 @@
 * {{rank|England|sense|ten|422|beautiful|possible|mark|followed}}
 
 [[Category:1000 English basic words]]
+[[Category:Beauty]]
 
 [[af:beautiful]]
 [[ang:beautiful]]
