* [[Appendix:Place names in {{subst:PAGENAME}}]] <France#11880291>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -145,6 +145,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 {{trans-bottom}}
 
 ===See also===
+* [[Appendix:Place names in France]]
 * {{list|en|countries of Europe}}
 
 ===References===
