/* See also */ <Germany#11880321>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -115,6 +115,7 @@ From {{etyl|la}} {{term|Germania|lang=la}}, likely of Gallic origin
 {{trans-bottom}}
 
 ===See also===
+* [[Appendix:Place names in Germany]]
 * {{list|en|countries of Europe}}
 {{top2}}
 * [[Alemania]]
