--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -101,6 +101,7 @@
 {{trans-top|colour}}
 * Bosnian: {{t-|bs|maslinasta|f}}
 * Croatian: {{t-|hr|maslinasta|alt=màslinastā}} {{t+|hr|boja|f|alt=bòja}}
+* Czech: {{t|cs|olivový|m}}
 * Dutch: {{t+|nl|olijfgroen|n}}
 * Finnish: {{t+|fi|oliivinvihreä}}
 * Greek: {{t|el|λαδί|n|tr=ladí}}
@@ -110,6 +111,7 @@
 * Kurdish: [[zeytûnî]], [[rengzeytûnî]]
 * Persian: {{fa-Arab|[[رنگ]] [[زیتونی]]}} (rang zaitūni), {{t-|fa|زیتونی|tr=zeytōni|xs=Persian}}
 {{trans-mid}}
+* Polish: {{t|pl|oliwkowy|f}}
 * Portuguese: [[verde-oliva]] {{m}}
 * Russian: {{t+|ru|оливковый|tr=olívkovyj}}
 * Serbian:
