--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -25,6 +25,7 @@
 =====Translations=====
 {{trans-top|cloth made of matted fibres of wool}}
 * Bosnian: {{t-|bs|pust|m}}, {{t|bs|filc|m}}
+* Catalan: {{t+|ca|feltre|m}}
 * Chinese: [[毛氈]], [[毛毡]] (máozhān)
 * Czech: {{t+|cs|plsť|f}}
 * Danish: {{t-|da|filt|n}}
