--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -40,6 +40,7 @@ From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, a Bib
 * Arabic: {{t-|ar|إسرائيل|m|tr='isra'íl}}
 * Armenian: {{t-|hy|Իսրայել|tr=Israyel}}
 * Belarusian: [[Ізраіль]] {{m}}
+* Bengali: {{t-|bn|ইসরায়েল}}
 * Bosnian: {{t-|bs|Izrael|m}}
 * [[Breton]]: {{t-|br|Israel|xs=Breton}}
 * Bulgarian: {{t+|bg|Израел|m|tr=Izrael}}
