--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -42,7 +42,7 @@
 {{trans-mid}}
 * Italian: {{t+|it|mantello|m}}
 * Japanese: {{t-|ja|コート|tr=kōto}}, {{t|ja|外套|tr=がいとう, gaitō}}
-* Korean: {{t|ko|코트|tr=k'ot'ŭ}}
+* Korean: {{t|ko|코트|tr=koteu}}
 * [[Luhya]]: {{tø|luy|kumuchosi}}
 * Navajo: {{tø|nv|éétsoh}}
 * Norwegian: {{t|no|frakk|m}}
