--- a/en/旦/旦.16910.wikitext
+++ b/en/旦/旦.16910.wikitext
@@ -15,6 +15,9 @@ Pictographic representation of the sun ([[日]]) appearing over the horizon.
 ====Derived characters====
 * [[但]] [[担]] [[坦]] [[怛]] [[胆]] [[疸]]
 
+====See also====
+* [[量]]<!-- unrelated, visually similar -->
+
 ====References====
 * {{Han ref|kx=0489.030|dkj=13734|dj=0850.010|hdz=21483.010|uh=65E6|ud=26086|bh=A5B9|bd=42425}}
 
