/* Old English */ format <het#11944726>

--- a/en/h/het.1522.wikitext
+++ b/en/h/het.1522.wikitext
@@ -134,7 +134,7 @@ Inflected form of ''[[hatan|hātan]]''.
 ===Verb===
 {{Latinx|'''hēt'''}}
 
-# ''third-person singular preterite form of '''[[hatan|hātan]]'''''
+# {{form of|third-person singular preterite form|hatan|hātan|lang=ang}}
 
 [[Category:Old English verb forms]]
 
