t+arz:[[جا]] t+aeb:[[جاء]] t+yi:[[קומען]] t+km:[[មក]] t-balance t+lo:[[ມາ]] t+hy:[[գալ]] t+ka:[[{{trreq}}]] ([[WT:EDIT|Assisted]]) <come#11949388>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -74,8 +74,8 @@ Examples exist in plays by Chicagoan {{w|David Mamet}}, such as ''{{w|American B
 ====Translations====
 {{trans-top|to move from further away to nearer to}}
 * Arabic: {{t|ar|جاء|tr=jaa'a}}, {{t|ar|حضر|tr=HáDara}}, {{t|ar|أتى|tr='ataa}}
-*: Egyptian Arabic: {{tø|arz|جا|tr=gaa|sc=Arab|xs=Egyptian Arabic}}
-* Armenian: [[գալ]] (gal)
+*: Egyptian Arabic: {{tø|arz|جا|tr=gaa|sc=Arab|xs=Egyptian Arabic}}, {{tø|arz|جا|tr=gaa|sc=Arab}}
+* Armenian: [[գալ]] (gal), {{t|hy|գալ|tr=gal|sc=Armn}}
 * [[Basque]]: [[etorri]]
 * [[Bavarian]]: [[kemma]]
 * Bulgarian: {{t+|bg|идвам}}
@@ -91,6 +91,7 @@ Examples exist in plays by Chicagoan {{w|David Mamet}}, such as ''{{w|American B
 * Finnish: {{t+|fi|tulla}}
 * French: {{t+|fr|venir}}
 * [[Galician]]: {{t+|gl|vir|xs=Galician}}
+* {{trreq|Georgian}}
 * German: {{t+|de|kommen}}
 * Greek: {{t+|el|έρχομαι|tr=érchomai}}
 * Hebrew: {{t-|he|בא|tr=ba}}
@@ -101,9 +102,11 @@ Examples exist in plays by Chicagoan {{w|David Mamet}}, such as ''{{w|American B
 * Irish: {{t-|ga|tar|xs=Irish}}
 * Italian: {{t+|it|venire}}
 * Japanese: {{t+|ja|来る|tr=くる, kúru}}, {{t|ja|いらっしゃる|tr=irassharu}} {{qualifier|honorific}},  {{t|ja|おいでになる|tr=o-ide-ni naru}} {{qualifier|honorific}}, {{t|ja|参る|tr=まいる, mairu}} {{qualifier|humble}}
-* Korean: {{t+|ko|오다|tr=oda|sc=Hang}}
+* [[Khmer]]: {{t|km|មក|tr=mɔɔk|sc=Khmr}}
 {{trans-mid}}
+* Korean: {{t+|ko|오다|tr=oda|sc=Hang}}
 * Kurdish: [[hatin]], {{ku-Arab|[[هاتن]]}}
+* Lao: {{t|lo|ມາ|tr=maa|sc=Laoo}}
 * Latin: {{t+|la|venio}}
 * [[Lojban]]: {{t-|jbo|klama|xs=Lojban}}
 * Malay: {{t+|ms|datang|xs=Malay}}, {{t-|ms|mari|xs=Malay}}
@@ -127,12 +130,12 @@ Examples exist in plays by Chicagoan {{w|David Mamet}}, such as ''{{w|American B
 * [[Tajik]]: {{t-|tg|омадан|tr=omadan|sc=Cyrl|xs=Tajik}}
 * [[Tamil]]: {{t|ta|வா|xs=Tamil}}
 * Thai: {{t+|th|มา|tr=maa}}
-* [[Tunisian Arabic]]: {{tø|aeb|جاء|tr=jāʾ|sc=Arab}}
+* [[Tunisian Arabic]]: {{tø|aeb|جاء|tr=jāʾ|sc=Arab}}, {{tø|aeb|جاء|tr=jaa'}}
 * Turkish: {{t+|tr|gelmek}}
 * Urdu: {{t+|ur|آنا|tr=ānā|xs=Urdu}}
 * Vietnamese: {{t+|vi|lại|xs=Vietnamese}}
 * [[West Frisian]]: {{t-|fy|komme|xs=West Frisian}}
-* Yiddish: [[קומען]] (komen)
+* Yiddish: [[קומען]] (komen), {{t|yi|קומען|tr=komen|sc=Hebr}}
 * [[Zazaki]]: {{tø|zza|amaene}}
 {{trans-bottom}}
 
