--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -80,7 +80,7 @@ Examples exist in plays by Chicagoan {{w|David Mamet}}, such as ''{{w|American B
 * [[Basque]]: [[etorri]]
 * [[Bavarian]]: [[kemma]]
 * Belarusian: {{t|be|прыходзіць|tr=pryxódzic’|sc=Cyrl}}
-* Bulgarian: {{t+|bg|идвам}}
+* Bulgarian: {{t+|bg|идвам|tr=idvam}}
 * Burmese: {{t-|my|လာ|tr=la|sc=Mymr|xs=Burmese}}
 * [[Catalan]]: {{t+|ca|venir}}
 * Chinese:
