--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -85,7 +85,7 @@
 * Slovak: {{t|sk|Spojené Štáty Americké|m|p}}, {{t-|sk|USA}}
 * Slovene: {{t|sl|Združene države Amerike|f|p}}, {{t|sl|Združene države|f|p}} (short form), {{t|sl|ZDA}}
 * Spanish: {{t+|es|Estados Unidos de América|m|s}}, (''short form'') {{t+|es|Estados Unidos|m|s}}, ''abbr:'' {{t-|es|EE. UU.|m|s}}, {{t-|es|EEUU}}
-* Swedish: {{t|sv|Amerikas förenade stater}}, {{t|sv|Förenta staterna}}
+* Swedish: {{t|sv|Amerikas förenta stater}}, {{t|sv|Förenta staterna}}
 * [[Tagalog]]: {{t|tl|Estados Unidos ng Amerika|xs=Tagalog}}
 * [[Tajik]]: [[Иёлоти Муттаҳидаи Амриқо]] (Iyoloti Muttaħidai Amriqo)
 * [[Telugu]]: [[అమెరికా సంయుక్త రాష్ట్రములు]]
