--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -359,6 +359,7 @@
 * Chinese: [[表演]] (biǎoyǎn)
 * Czech: {{t+|cs|hrát}}
 * Dutch: {{t+|nl|optreden}}
+* Esperanto: {{t|eo|roli}}
 * Finnish: {{t-|fi|näytellä}}
 * German: {{t+|de|spielen}}
 * Hebrew: {{t|he|שיחק|tr=sikhék}}
