t+eo:[[tondri]] ([[WT:EDIT|Assisted]]) <thunder#11978103>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -173,6 +173,7 @@ From {{etyl|ang}} {{term|þunor}}, from {{proto|Germanic|þunraz}} < *þen, from
 * [[Breton]]: [[ober]] [[kurun]], [[taranal]] / [[taraniñ]]
 * Czech: [[hřmít]]
 * Dutch: {{t+|nl|donderen}}
+* Esperanto: {{t|eo|tondri}}
 * Finnish: {{t-|fi|ukkostaa}}, {{t-|fi|jyristä}}, {{t+|fi|pauhata}}
 * French: {{t+|fr|tonner}}
 * German: {{t+|de|donnern}}
