--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -73,6 +73,7 @@ From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, a Bib
 * [[Kikuyu]]: {{tø|ki|Israel}}
 * Korean: {{t+|ko|이스라엘|tr=Iseura-el|sc=Hang}}
 {{trans-mid}}
+* Latin: {{t-|la|Israel}}
 * Latvian: {{t-|lv|Izraēla|xs=Latvian}}, {{t|lv|Izraēlas Valsts|xs=Latvian}}
 * Lithuanian: {{t+|lt|Izraelis|m|xs=Lithuanian}}, {{t|lt|Izraelio Valstybė|f|xs=Lithuanian}}
 * [[Livonian]]: [[Izraēl]], [[Jūdõmō]]
