--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -73,7 +73,7 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþanan|lang
 * Italian: {{t+|it|trovare}}
 * Japanese: [[発見]]する (はっけんする, hakken-suru), [[見附る]], [[見つける]] ([[みつける]],mitsukeru)
 * Kurdish: {{ku-Arab|[[دیتنه‌وه‌]]}}, {{ku-Arab|[[دۆزینه‌وه‌]]}}
-* Latin: {{t-|la|invenire|alt=invenīre}}
+* Latin: {{t-|la|invenire|alt=invenīre}}, {{t|la|nanciscor}}
 * Latvian: {{t|lv|atrast|xs=Latvian}}
 * Lithuanian: {{t|lt|surasti|xs=Lithuanian}}
 * Mongolian: {{t-|mn|олох|sc=Cyrl|xs=Mongolian}}
