--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -283,6 +283,7 @@ Abbreviation of [[portmanteau]].
 {{xno-noun|m|porz|porz}}
 
 # [[port#English|port]] (docking station for watercraft)
+#* {{quote-book|circa 1150|title=[[s:fr:La Chanson de Roland/Raoul Mortier|La Chanson de Roland]]|author=Turoldus|passage=As '''porz''' d'Espaigne en est passet Rollant|translation=Roland went to the ports of Spain}}
 
 ----
 
