--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -34,7 +34,7 @@ From {{etyl|la}} {{term|i.e.|lang=la}}, an abbreviation of {{term|lang=la|id est
 * Finnish: [[l.]] {{qualifier|[[eli]]}}, [[ts.]] {{qualifier|[[toisin sanoen]]}}
 * French: {{t+|fr|c.-à-d.}}
 * German: [[d. h.]] {{qualifier|[[das heißt]]}}
-* Greek: [[δηλαδή]], [[ήτοι]], [[τουτέστιν]], {{t|el|δηλ.|tr=dil.|sc=Grek}}
+* Greek: {{t|el|δηλαδή|tr=diladí|sc=Grek}} {{qualifier|abbrev. {{t|el|δηλ.|tr=dil.|sc=Grek}}}}, {{t|el|ήτοι|tr=ítoi|sc=Grek}}, {{t|el|τουτέστιν|tr=toutéstin|sc=Grek}}
 {{trans-mid}}
 * Hebrew: {{t|he|דהיינו|tr=deháinu}},  {{t|he|כלומר|tr=klomár}},  {{t|he|זאת אומרת|tr=zót oméret}}
 * Hungarian: {{t+|hu|azaz}}
