--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -51,6 +51,7 @@ From {{etyl|la}} {{term|Germania|lang=la}}, likely of Gallic origin
 * Finnish: {{t+|fi|Saksa}}
 * French: {{t+|fr|Allemagne|f}}
 * [[Galician]]: {{t+|gl|Alemaña|f|xs=Galician}}
+* Georgian: {{t|ka|გერმანია|tr=germania|sc=Geor}}
 * German: {{t+|de|Deutschland|n}}
 *: Middle High German: [[Tiutschlant]] {{n}}
 * Greek: {{t+|el|Γερμανία|f|tr=Germanía}}
@@ -65,11 +66,11 @@ From {{etyl|la}} {{term|Germania|lang=la}}, likely of Gallic origin
 * Italian: {{t+|it|Germania|f}}
 * Japanese: {{t+|ja|ドイツ|tr=Doitsu}}, {{t+|ja|独逸|tr=Doitsu}} {{qualifier|obsolete}}
 * [[Kannada]]: {{t-|kn|ಜರ್ಮನಿ|tr=jarmani|sc=Knda|xs=Kannada}}
-* [[Khmer]]: {{Khmr|[[ប្រទេស​អាឡឺម៉ង់]]}} (bprədtēh āleumong)
+* [[Khmer]]: {{Khmr|[[ប្រទេស​អាឡឺម៉ង់]]}} (bprədtēh āleumong), {{t|km|ប្រទេស​អាឡឺម៉ង់|tr=bprədtēh āleumong|sc=Khmr}}
 * Korean: {{t+|ko|독일|tr=Dogil|sc=Hang}} ({{t|ko|獨逸|sc=Hani}}); {{t|ko|도이췰란드|tr=Doichwillandeu|sc=Hang}} (''North Korea'')
 * Latin: {{t+|la|Germania|f}}
-* Latvian: {{t+|lv|Vācija|f|xs=Latvian}}
 {{trans-mid}}
+* Latvian: {{t+|lv|Vācija|f|xs=Latvian}}
 * Lithuanian: {{t+|lt|Vokietija|f|xs=Lithuanian}}
 * [[Livonian]]: [[Saksāmō]]
 * [[Luhya]]: {{tø|luy|Jamani}}
@@ -105,6 +106,7 @@ From {{etyl|la}} {{term|Germania|lang=la}}, likely of Gallic origin
 * Thai: {{t|th|ประเทศเยอรมัน|tr=bpràtêt yerráman}}, {{t|th|เยอรมนี|tr=yerromnee}}, {{t|th|เยอรมัน|tr=yerráman}}
 * Turkish: {{t+|tr|Almanya}}
 * Ukrainian: {{t+|uk|Німеччина|f|tr=Niméččyna|xs=Ukrainian}}
+* Urdu: {{t|ur|جرمنی|m|tr=jarmanī|sc=ur-Arab}}
 * [[Uyghur]]: {{t-|ug|گېرمانىيە|tr=gérmaniye|sc=ug-Arab|xs=Uyghur}}
 * Vietnamese: {{t|vi|nước Đức|xs=Vietnamese}}, {{t+|vi|Đức|xs=Vietnamese}} ({{t-|vi|德|sc=Hani|xs=Vietnamese}})
 * [[Volapük]]: {{t|vo|Deutän}}, {{qualifier|obsolete}} {{t|vo|Deut}}
