--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -31,7 +31,7 @@ From {{etyl|la}} {{term|Germania|lang=la}}, likely of Gallic origin
 * [[Basque]]: {{t+|eu|Alemania|xs=Basque}}
 * [[Bavarian]]: {{tø|bar|Deitschland}}
 * Belarusian: {{t|be|Германія|f|tr=Hermánija|xs=Belarusian}}
-* Bengali: {{t-|bn|জার্মানি|jôrmôni}}
+* Bengali: {{t-|bn|জার্মানি|tr=jôrmôni}}
 * Bosnian: {{t-|bs|Njemačka|f}}
 * [[Breton]]: [[Alamagn]]
 * Bulgarian: {{t+|bg|Германия|f|tr=Germánija}}
