--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -68,8 +68,9 @@ From {{etyl|la}} {{term|Germania|lang=la}}, likely of Gallic origin
 * [[Kannada]]: {{t-|kn|ಜರ್ಮನಿ|tr=jarmani|sc=Knda|xs=Kannada}}
 * [[Khmer]]: {{t|km|ប្រទេស​អាឡឺម៉ង់|tr=bprədtēh āleumong|sc=Khmr}}
 * Korean: {{t+|ko|독일|tr=Dogil|sc=Hang}} ({{t|ko|獨逸|sc=Hani}}); {{t|ko|도이췰란드|tr=Doichwillandeu|sc=Hang}} (''North Korea'')
-* Latin: {{t+|la|Germania|f}}
+* Lao: {{t|lo|ປະເທດເຢັຽລະມັນ|sc=Laoo}}
 {{trans-mid}}
+* Latin: {{t+|la|Germania|f}}
 * Latvian: {{t+|lv|Vācija|f|xs=Latvian}}
 * Lithuanian: {{t+|lt|Vokietija|f|xs=Lithuanian}}
 * [[Livonian]]: [[Saksāmō]]
