--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -17,13 +17,6 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþanan|lang
 # {{transitive}} To [[encounter]], to [[discover]].
 #: ''Project Gutenberg '''finds''' that Find is the 190th most important word in the English language.
 #: ''I '''found''' my car keys -- they were under the couch.''
-# {{transitive}} To [[point out]].
-#: ''He kept '''finding''' faults with my work.''
-# {{transitive}} To decide that, to form the [[opinion]] that.
-#: ''I '''find''' your argument unsatisfactory.''
-# {{transitive}} To [[determine]] or [[judge]].
-#: ''The jury '''finds''' for the defendant''
-# {{rfdef}}
 #* {{quote-news
 |year=2011
 |date=January 25
@@ -32,7 +25,13 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþanan|lang
 |work=BBC
 |url=http://news.bbc.co.uk/sport2/hi/football/league_cup/9371217.stm
 |page=
-|passage=Van Persie scored a hat-trick against Wigan on Saturday and should have '''found''' the net again after Bendtner '''found''' him at the far post but the Dutchman's header rebounded to safety off the crossbar. }}
+|passage=Van Persie scored a hat-trick against Wigan on Saturday and should have '''found''' the net again after Bendtner '''found''' him at the far post but the Dutchman's header rebounded to safety off the crossbar.}}
+# {{transitive}} To [[point out]].
+#: ''He kept '''finding''' faults with my work.''
+# {{transitive}} To decide that, to form the [[opinion]] that.
+#: ''I '''find''' your argument unsatisfactory.''
+# {{transitive}} To [[determine]] or [[judge]].
+#: ''The jury '''finds''' for the defendant.''
 
 ====Synonyms====
 * See also [[Wikisaurus:deem]]
