--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -8,7 +8,7 @@
 * {{rhymes|əʊt}}
 
 ===Etymology===
-From {{etyl|enm}} {{term|floten|lang=enm}}, from {{etyl|ang}} {{term|flotian||to float|lang=ang}}, from {{proto|Germanic|flutōjanan|to float|lang=en}}, from {{proto|Indo-European|pleud-||plew-||plōw-|to float, swim, fly|lang=en}}. Cognate with {{etyl|gml|-}} {{term|vloten|lang=gml}}, {{term|vlotten||to float, swim|lang=gml}}, Middle Dutch {{term|vloten|lang=dum}}, Old Norse {{term|flota|lang=non}}, Icelandic {{term|fljóta|lang=is}}, {{etyl|ang|-}} {{term|fleotan|flēotan|to float, swim|lang=ang}}.
+From {{etyl|enm}} {{term|floten|lang=enm}}, from {{etyl|ang}} {{term|flotian||to float|lang=ang}}, from {{proto|Germanic|flutōnan|to float|lang=en}}, from {{proto|Indo-European|pleud-||plew-||plōw-|to float, swim, fly|lang=en}}. Cognate with {{etyl|gml|-}} {{term|vloten|lang=gml}}, {{term|vlotten||to float, swim|lang=gml}}, Middle Dutch {{term|vloten|lang=dum}}, Old Norse {{term|flota|lang=non}}, Icelandic {{term|fljóta|lang=is}}, {{etyl|ang|-}} {{term|fleotan|flēotan|to float, swim|lang=ang}}.
 
 ===Noun===
 {{en-noun}}
