t+fa:[[مستقیم]] t-balance ([[WT:EDIT|Assisted]]) <straight#12170426>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -66,12 +66,13 @@
 * Hindi: {{t|hi|सीधा|tr=sīdhā|sc=Deva}}
 * Hungarian: {{t+|hu|egyenes}}
 * Icelandic: {{t+|is|beinn}}
-{{trans-mid}}
 * Irish: {{t-|ga|díreach|xs=Irish}}
+{{trans-mid}}
 * Italian: {{t+|it|dritto}}
 * Japanese: {{t|ja|真直ぐ|tr=まっすぐな, massugu-na|alt=真直ぐな|sc=Jpan}}
 * Kurdish: {{ku-Arab|[[ڕێک]]}}
 * [[Macedonian]]: {{t-|mk|прав|m|tr=prav}}
+* Persian: {{t|fa|مستقیم|sc=fa-Arab}}
 * Polish: {{t+|pl|prosty}}
 * Portuguese: {{t+|pt|reto|m}}
 * Romanian: {{t-|ro|drept}}
