--- a/en/偶/偶.11142.wikitext
+++ b/en/偶/偶.11142.wikitext
@@ -1,4 +1,6 @@
 ==Translingual==
+===Etymology===
+{{Han compound|人|alt1=亻|t1=person|禺|ls=psc|c1=s|c2=p}} – a statue of a person, an idol.
 
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2622<sub>7</sub>|canj=人田中月 (OWLB)}}
