--- a/en/愚/愚.15662.wikitext
+++ b/en/愚/愚.15662.wikitext
@@ -1,4 +1,6 @@
 ==Translingual==
+===Etymology===
+{{Han compound|禺|心|t2=heart|ls=psc|c1=p|c2=s}} – stupid, a personality trait (心).
 
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=13|four=6033<sub>2</sub>|canj=田月心 (WBP)}}
