--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -267,7 +267,7 @@
 * Portuguese: {{t+|pt|jogar}}
 * Romanian: {{t+|ro|juca}}
 * [[Romansch]]: {{t|rm|giugar|xs=Romansch}}
-* Russian: {{t+|ru|играть|tr=igrát’}} {{impf}}
+* Russian: {{t+|ru|играть|tr=igrát’}} {{impf}}, {{t+|ru|поиграть|tr=poigrát’}} {{impf}}
 * [[Scottish Gaelic]]: {{t-|gd|cluich|xs=Scottish Gaelic}},  {{qualifier|children}} {{t-|gd|cleasaich|xs=Scottish Gaelic}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|играти|alt=и̏грати|sc=Cyrl|xs=Serbo-Croatian}}
@@ -307,7 +307,7 @@
 * [[Pashto]]: {{t-|ps|ږغول|tr=zhaγawəl|sc=ps-Arab|xs=Pashto}}
 * Polish: [[grać]] na
 * Portuguese: {{t+|pt|tocar}}
-* Russian: {{t+|ru|играть|tr=igrát’}} {{impf}}
+* Russian: {{t+|ru|играть|tr=igrát’}} {{impf}}, {{t+|ru|поиграть|tr=poigrát’}} {{impf}} (+ [[на]] (na) + [[prepositional case]])
 * Slovene: {{t+|sl|igrati}}
 * Spanish: {{t+|es|tocar}}
 * Swedish: {{t+|sv|spela}}
@@ -338,7 +338,7 @@
 * [[Pashto]]: {{t-|ps|ږغول|tr=zhaγawəl|sc=ps-Arab|xs=Pashto}}
 * Polish: {{t+|pl|grać}}
 * Portuguese: {{t+|pt|tocar}}
-* Russian: {{t+|ru|играть|tr=igrát’}} {{impf}}
+* Russian: {{t+|ru|играть|tr=igrát’}} {{impf}}, {{t+|ru|поиграть|tr=poigrát’}} {{impf}}
 * Slovene: {{t+|sl|igrati}}
 * Spanish: {{t+|es|tocar}}
 * Swahili: {{t+|sw|tamthilia|xs=Swahili}}
