--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -31,7 +31,7 @@ From {{etyl|la}} {{term|vomitare|vomitāre|lang=la}}, present active infinitive 
 * Esperanto: {{t-|eo|vomi|xs=Esperanto}}
 * Estonian: {{t-|et|oksendama}}
 * Finnish: {{t+|fi|oksentaa}}
-* French: {{t+|fr|vomir}}
+* French: {{t+|fr|vomir}}, {{t+|fr|rendre}}, {{t+|fr|rejeter}}, {{t+|fr|dégobiller}} {{qualifier|familiar}}
 * [[Galician]]: {{t+|gl|vomitar|xs=Galician}}
 * German: [[sich]] [[übergeben]], [[erbrechen]], {{t|de|kotzen}}
 * Greek: [[εμώ]], [[κάνω εμετό]], [[ξερνώ]] {{qualifier|colloquial}}
@@ -41,7 +41,7 @@ From {{etyl|la}} {{term|vomitare|vomitāre|lang=la}}, present active infinitive 
 * Japanese: [[吐く]] ([[はく]], haku), [[嘔吐する]] ([[おうとする]], ōtosuru), {{t|ja|戻す|tr=もどす, modosu|sc=Jpan}}
 {{trans-mid}}
 * Korean: [[게우다]] (geuda)<!--, [[토하다]] ([[吐]]-, to-hada)-->
-* Latin: {{t-|la|vomo}}, {{t-|la|vomito}}
+* Latin: {{t-|la|vomo|alt=vomō}}, {{t-|la|vomito|vomitō}}
 * Latvian: {{t|lv|vemt}}
 * Lithuanian: {{t+|lt|vemti|xs=Lithuanian}}
 * [[Macedonian]]: {{t-|mk|повраќа|tr=póvraḱa}},  {{t-|mk|блуе|tr=blúe}}
@@ -49,12 +49,12 @@ From {{etyl|la}} {{term|vomitare|vomitāre|lang=la}}, present active infinitive 
 * Norwegian: {{t+|no|kaste opp}}, {{t+|no|spy}}, {{t|no|brekke seg}}
 * [[Old Irish]]: {{tø|sga|sceid|xs=Old Irish}}
 * Polish: {{t+|pl|wymiotować}}
-* Portuguese: {{t+|pt|vomitar}}
+* Portuguese: {{t+|pt|vomitar}}, {{t|pt|regurgitar}}
 * Romanian: {{t-|ro|vomita}}, {{t+|ro|borî}},  {{t-|ro|vărsa}}
 * [[Romansch]]: {{t-|rm|vomitar|xs=Romansch}}
 * Russian: {{t+|ru|блевать}}, {{t+|ru|рвать}}
 * Serbian: {{t|sr|zbljuvati}}, {{t|sr|povratiti}}, {{t-|sr|bljuvati}}, {{t-|sr|povraćati}}
-* Spanish: {{t+|es|vomitar}}, {{t+|es|devolver}}
+* Spanish: {{t+|es|vomitar}}, {{t+|es|devolver}}, {{t+|es|arrojar}}
 * Swahili: {{t|sw|kutapika}}
 * Swedish: {{t+|sv|kräkas}}, {{t+|sv|spy}}
 * Turkish: {{t+|tr|kusmak}}
