--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -53,7 +53,7 @@ From {{etyl|ML.}} {{term|lang=la|secretarius||one entrusted with secrets}} < {{e
 * Italian: {{t+|it|segretario|m}}
 {{trans-mid}}
 * Japanese: {{t-|ja|秘書|tr=ひしょ, hisho}}
-* Korean: [[비서]] (biseo)
+* Korean: [[비서]] (biseo), {{t|ko|비서|tr=biseo|sc=Kore}}, {{t|ko|秘書|sc=Kore}}
 * Kurdish:
 *: Kurmanji: [[katib]], [[sekreter]]
 *: Sorani: {{t|ku|سکرتێر|tr=sikirtaer|sc=ku-Arab}}
@@ -68,6 +68,7 @@ From {{etyl|ML.}} {{term|lang=la|secretarius||one entrusted with secrets}} < {{e
 * [[Telugu]]: [[కార్యదర్శి]] (kaaryadarSi), [[సహాయకుడు]] (sahaayakuDu)
 * [[Tok Pisin]]: [[sekreteri]]
 * Turkish: {{t+|tr|sekreter}}
+* Vietnamese: {{t|vi|thư ký}}
 * [[Volapük]]: {{t|vo|sekretan}}
 * Welsh: {{t|cy|ysgrifenydd|m|xs=Welsh}}, {{t|cy|ysgrifenyddes|f|xs=Welsh}}
 {{trans-bottom}}
