xno = olive tree <olive#12249254>

--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -4,7 +4,7 @@
 [[Image:Olea_europaea1.jpg|thumb|''Olea europaea'' (1)]]
 
 ===Etymology===
-{{etyl|fro}} {{term|olive|lang=fro}} 'olive, olive tree', from {{etyl|la|en}} {{term|oliva|olīva|lang=la}} 'olive', from {{etyl|grc|en}} {{term|ἐλαία|sc=polytonic|tr=elaía|lang=grc}}, from {{proto|Indo-European|loiu̯om}} (compare [[Old Church Slavonic]] {{term|lojŭ}} 'tallow', {{etyl|xcl}} {{term|իւղ|եւղ|tr=ewł|lang=xcl}} 'oil').<ref>Radoslav Katičić, ''Ancient Languages of the Balkans, Part One'' (Paris: Mouton, 1976).</ref>
+{{etyl|fro}} {{term|olive|lang=fro}} 'olive, olive tree', from {{etyl|la}} {{term|oliva|olīva|lang=la}} 'olive', from {{etyl|grc}} {{term|ἐλαία|sc=polytonic|tr=elaía|lang=grc}}, from {{proto|Indo-European|loiu̯om}} (compare [[Old Church Slavonic]] {{term|lojŭ}} 'tallow', {{etyl|xcl}} {{term|իւղ|եւղ|tr=ewł|lang=xcl}} 'oil').<ref>Radoslav Katičić, ''Ancient Languages of the Balkans, Part One'' (Paris: Mouton, 1976).</ref>
 
 ===Pronunciation===
 * {{enPR|ŏ'lĭv}}, {{IPA|/ˈɒlɪv/}}, {{SAMPA|/"QlIv/}}
@@ -148,10 +148,9 @@
 ===Adjective===
 {{en-adj}}
 
-# Of a [[greyish]]/[[grayish]] [[green]] [[colour]]/[[color]], that of an unripe olive.
+# Of a [[grayish]] [[green]] [[color]], that of an unripe olive.
 
 ====Translations====
-
 {{trans-top|colour}}
 * Bosnian: {{t-|bs|maslinast}}
 * Croatian: {{t-|hr|maslinast|alt=màslinast}}
@@ -186,13 +185,21 @@
 <references/>
 
 ===Anagrams===
-* {{alphagram|eilov}} [[voile#English|voile]]
+*  [[voile#English|voile]]
 
 [[Category:Colors]]
 [[Category:Fruits]]
 [[Category:Greens]]
 [[Category:Trees]]
 [[Category:Refractory feminine rhymes]]
+----
+
+==Anglo-Norman==
+
+===Noun===
+{{xno-noun|m}}
+
+# [[olive]] [[tree]]
 
 ----
 
@@ -208,7 +215,7 @@
 # {{l|en|olive}}
 
 ===Anagrams===
-* {{alphagram|eilov}} [[viole#French|viole]], [[violé#French|violé]], [[voile#French|voile]], [[voilé#French|voilé]]
+*  [[viole#French|viole]], [[violé#French|violé]], [[voile#French|voile]], [[voilé#French|voilé]]
 
 ----
 
@@ -217,10 +224,10 @@
 ===Noun===
 '''olive''' {{f}}
 
-# {{plural of|[[oliva]]|lang=it}}
+# {{plural of|oliva|lang=it}}
 
 ===Anagrams===
-* {{alphagram|eilov}} [[Elvio#Italian|Elvio]], [[ovile#Italian|ovile]], [[viole#Italian|viole]], [[voile#Italian|voile]]
+*  [[Elvio#Italian|Elvio]], [[ovile#Italian|ovile]], [[viole#Italian|viole]], [[voile#Italian|voile]]
 
 [[cs:olive]]
 [[co:olive]]
