--- a/en/慎/慎.15713.wikitext
+++ b/en/慎/慎.15713.wikitext
@@ -1,5 +1,9 @@
 {{also|愼}}
 ==Translingual==
+{{ja-forms|慎|慎|慎}}
+
+===Etymology===
+{{Han compound|心|alt1=忄|t1=heart|真|ls=psc|c1=s|c2=p}} – a behavior trait (heart), care, caution. Note that 真 means “truth, genuine, sincerity”, hence connotations of “acting sincerely, with care”.
 
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=13|four=9408<sub>1</sub>|canj=心十月金 (PJBC)}}
