--- a/en/慎/慎.15713.wikitext
+++ b/en/慎/慎.15713.wikitext
@@ -1,6 +1,8 @@
 {{also|愼}}
 ==Translingual==
 {{ja-forms|慎|慎|慎}}
+===Alternative forms===
+Note the different forms, corresponds to different forms of [[真]].
 
 ===Etymology===
 {{Han compound|心|alt1=忄|t1=heart|真|ls=psc|c1=s|c2=p}} – a behavior trait (heart), care, caution. Note that 真 means “truth, genuine, sincerity”, hence connotations of “acting sincerely, with care”.
