t+vi:[[nói chuyện]] ([[WT:EDIT|Assisted]]) <speak#12291285>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -137,7 +137,7 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 * Ukrainian: {{t-|uk|говорити|tr=hovorýty|xs=Ukrainian}},  {{t|uk|розмовляти|tr=rozmovljáty|xs=Ukrainian}}
 * Urdu: {{t-|ur|بولنا|tr=bolnā|xs=Urdu}}
 * Uzbek: {{t|uz|gaplashmoq|xs=Uzbek}}
-* Vietnamese: {{t+|vi|nói|xs=Vietnamese}}
+* Vietnamese: {{t+|vi|nói|xs=Vietnamese}}, {{t|vi|nói chuyện}}
 * [[Volapük]]: {{t|vo|spikön}}
 * [[West Frisian]]: {{t-|fy|sprekke|xs=West Frisian}}
 * Yiddish: {{t+|yi|רעדן|tr=redn|sc=Hebr|xs=Yiddish}}
