--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -86,10 +86,11 @@
 * Indonesian: [[indah]], [[cantik]], [[ayu]], [[molek]], [[cakep]]
 * [[Interlingua]]: {{t|ia|belle}}
 * Irish: {{t-|ga|álainn|xs=Irish}}
-{{trans-mid}}
 * Italian: {{t+|it|bello}}
+{{trans-mid}}
 * Japanese: {{t+|ja|美しい|tr=うつくしい, utsukushii}},  {{t-|ja|綺麗}},  {{t-|ja|きれい|tr=kirei}},  {{t+|ja|素敵|tr=すてき, suteki}}
 * [[Khmer]]: {{Khmr|[[ស្អាត]]}} (saāt), {{t-|km|ល្អ|tr=l'ɑɑ|sc=Khmr|xs=Khmer}}
+* Korean: {{qualifier|attributive}} {{t|ko|아름다운|tr=areumdaun|sc=Kore}}, {{qualifier|predicative}} {{t|ko|아름답다|tr=areumdapda|sc=Kore}}
 * Kurdish: {{ku-Arab|[[جوان]]}}, {{ku-Arab|[[ئێسک سووک]]}}
 * Latin: {{t-|la|pulcher}}, {{t-|la|formosus|m}}, {{t+|la|bellus|m}}
 * [[Limburgish]]: {{t-|li|sjoen|xs=Limburgish}}
