--- a/en/昬/昬.16980.wikitext
+++ b/en/昬/昬.16980.wikitext
@@ -16,7 +16,7 @@
 ===Kanji===
 {{ja-kanji|grade=|rs=日05}}
 
-# {{defn|lang=ja|sort=日05}}
+# {{alternative form of|昏|lang=ja}}
 
 ====Readings====
 * {{ja-readings|on=[[こん]] (kon)|kun=[[くらい]] (kurai), [[くれ]] (kure)}}
