--- a/en/旱/旱.16921.wikitext
+++ b/en/旱/旱.16921.wikitext
@@ -24,7 +24,7 @@
 ==Japanese==
 
 ===Etymology===
-/hi<sub>1</sub>deri/: *pideri > ɸideri > çito. The nominalization of the verb {{term|日照る|hideru}}.
+/hi<sub>1</sub>deri/: *pideri > ɸideri > çideri. The nominalization of the verb {{term|日照る|hideru}}.
 
 ===Alternative forms===
 * [[日照り]]
