t+is:[[bridds]] t-balance ([[WT:EDIT|Assisted]]) <bridge#12330555>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -262,9 +262,10 @@ Name of an older card game ''biritch'', probably {{etyl|ru}} - OED, or probably 
 * French: {{t+|fr|bridge|m}}
 * German: {{t+|de|Bridge|n}}
 * Hungarian: {{t+|hu|bridzs}}
+* Icelandic: {{t|is|bridds|n}}
 * Italian: {{t+|it|bridge|m}}
-* Latvian: [[bridžs]] {{m}}
 {{trans-mid}}
+* Latvian: [[bridžs]] {{m}}
 * Polish: {{t+|pl|brydż|m}}
 * Russian: {{t+|ru|бридж|m|tr=bridž}}
 * Serbian:
