--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -55,6 +55,7 @@
 * {{l|ja|sc=Jpan|地表|tr=ちひょう, chihyō}}
 * {{l|ja|sc=Jpan|地方|tr=ちほう, chihō}}
 * {{l|ja|sc=Jpan|地理|tr=ちり, chiri}}
+* {{l|ja|sc=Jpan|地震|tr=じしん, jishin}}
 {{bottom}}
 
 ===Noun===
