--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -170,6 +170,7 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 {{trans-bottom}}
 
 {{trans-top|cutting of a deck of playing cards}}
+* Czech: {{t|cs|snímání}}
 * Danish: {{t|da|aftagning|c}}
 * Finnish: {{t-|fi|nosto}}
 * German: {{t+|de|abheben}}, {{t+|de|schneiden}}
