--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -19,6 +19,12 @@ From {{etyl|enm}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|conter|
 # {{baseball}} The number of [[balls]] and [[strikes]], respectively, on a batter's in-progress [[plate appearance]].
 #: ''He has a 3-2 '''count''' with the bases loaded.''
 
+=====Derived terms=====
+{{rel-top|Terms derived from ''count'' (noun)}}
+{{rel-mid}}
+* [[sperm count]]
+{{rel-bottom}}
+
 =====Translations=====
 {{trans-top|the act of counting}}
 * Bulgarian: {{t|bg|смятане|n}}
