t+nl:[[blond]] t+grc:[[ξανθός]] t-balance ([[WT:EDIT|Assisted]]) <blond#12483266>

--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -75,10 +75,13 @@ Alternate etymology connects {{frk}} *''blund'' to {{proto|Germanic|blundaz|blon
 {{trans-top|person's complexion}}
 * Arabic: {{t|ar|أشقر|m|tr='áshqar}},  {{t|ar|شقراء|f|tr=shaqraa'}},  {{t|ar|شقر|p|tr=shuqr}}
 * Bulgarian: {{t|bg|рус}},  {{t+|bg|светъл}}
+* Dutch: {{t|nl|blond}}
 * Esperanto: {{t-|eo|blonda|xs=Esperanto}}
 * Finnish: {{t+|fi|vaalea}}
-* [[Macedonian]]: {{t|mk|светол|m|tr=svétol}},  {{t|mk|белолик|m|tr=bélolik}},  {{t|mk|светла|f|tr=svétla}},  {{t|mk|белолика|f|tr=belólika}}
+* Greek:
+*: Ancient: {{tø|grc|ξανθός|sc=polytonic}}
 {{trans-mid}}
+* [[Macedonian]]: {{t|mk|светол|m|tr=svétol}},  {{t|mk|белолик|m|tr=bélolik}},  {{t|mk|светла|f|tr=svétla}},  {{t|mk|белолика|f|tr=belólika}}
 * Russian: {{t+|ru|белый|tr=bélyj}}
 * Swedish: {{t|sv|ljus}}, {{t|sv|ljushyad}}, blond
 * [[Volapük]]: {{t|vo|blonik}}, {{qualifier|obsolete}} {{t|vo|blönik}}
