--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -180,7 +180,7 @@
 * Kurdish: {{ku-Arab|[[پاڵ]]}}
 {{trans-mid}}
 * Portuguese: {{t|pt|empurrão|m}}
-* Russian: {{t|ru|толчок|m|sc=Cyrl|tr=eolčók}}
+* Russian: {{t|ru|толчок|m|sc=Cyrl|tr=tolčók}}
 * Spanish: {{t-|es|empujón|m}}
 * [[Telugu]]: {{t|te|వెనుకకు నెట్టి ముందుకు పోవు|tr=venukaku netti munduku povu|sc=Telu}}
 {{trans-bottom}}
