t+ga:[[súgradh]] ([[WT:EDIT|Assisted]]) <play#12590374>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -252,7 +252,7 @@
 * Hungarian: {{t+|hu|játszik}}
 * Icelandic: {{t+|is|leika}}, {{t+|is|leika sér}}
 * [[Interlingua]]: {{t-|ia|jocar|xs=Interlingua}}
-* Irish: {{t|ga|imir}}
+* Irish: {{t|ga|imir}}, {{t|ga|súgradh}}
 * Italian: {{t-|it|giocare}}
 * Japanese: {{t|ja|遊ぶ|tr=あそぶ, asobu|sc=Jpan}}
 * Korean: {{t|ko|놀다|tr=nolda|sc=Kore}}
