--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -304,9 +304,10 @@ From {{etyl|enm|en}}, from {{etyl|xno|en}} {{term|cachier||lang=xno}}, from {{et
 * Dutch: {{t+|nl|vangen}}
 * Finnish: {{t-|fi|pyydystää}}, {{t+|fi|ottaa kiinni}}, {{t+|fi|napata}}, {{t-|fi|siepata}}
 * French: {{t+|fr|attraper}}
-{{trans-mid}}
 * German: {{t+|de|fangen}}
+{{trans-mid}}
 * Hebrew: {{t|he|תפס|tr=tafás}}
+* Hindi: {{t|hi|पकड़ना|tr=pakaṛnā|sc=Deva}}
 * Irish: {{t|ga|beir ar|xs=Irish}}
 * Japanese: {{t-|ja|捕まえる|tr=tsukamaeru}},  {{t|ja|捕る|tr=toru}}
 * Korean: {{t+|ko|잡다|tr=japda|sc=Hang}}
@@ -316,6 +317,7 @@ From {{etyl|enm|en}}, from {{etyl|xno|en}} {{term|cachier||lang=xno}}, from {{et
 * Slovene: [[ujeti]]
 * Spanish: [[atajar]] {{qualifier|Latin America}}, [[cazar]] (''football'')
 * Swedish: {{t|sv|fånga}}, {{t|sv|fatta}} (''dated'')
+* Urdu: {{t|ur|پکڑنا|tr=pakaṛnā|sc=ur-Arab}}
 {{trans-bottom}}
 
 {{trans-top|to perceive and understand {{jump|t|perceive and understand}} }}
