--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -70,6 +70,7 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþanan|lang
 * Hindi: {{t|hi|पाना|tr=pānā|sc=Deva}}
 * Icelandic: {{t+|is|finna}}
 {{trans-mid}}
+* [[Interlingua]]: {{t|ia|trovar}}
 * Irish: {{t+|ga|faigh|xs=Irish}}
 * Italian: {{t+|it|trovare}}
 * Japanese: {{t|ja|見つける|tr=みつける, mitsukeru|sc=Jpan}} ({{t|ja|見附る|sc=Jpan}})
