--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -255,7 +255,7 @@
 # A part of a [[racecourse]], [[running]] [[track]] or other road etc that is not [[curved]].
 # A [[heterosexual]].
 # In [[poker]], five cards in [[sequence]].
-# (''Slang'') A [[cigarette]], particularly one containing [[tobacco]] instead of [[marijuana]]. Also [[straighter]].
+# {{slang}} A [[cigarette]], particularly one containing [[tobacco]] instead of [[marijuana]]. Also [[straighter]].
 
 ====Translations====
 {{trans-top|part of a racecourse or running track that is not curved}}
