--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -12,7 +12,7 @@ From {{etyl|la}} {{term|i.e.|lang=la}}, an abbreviation of {{term|lang=la|id est
 '''i.e.'''
 
 # {{context|[[initialism]]}} That is; in other words; that is to say.
-#: ''The three U.S. states on the west coast ('''i.e.''' Washington, Oregon, and California) have favorable climates.''
+#: ''The three U.S. states on the west coast ('''i.e.''', Washington, Oregon, and California) have favorable climates.''
 
 ====Usage notes====
 * '''i.e.''' is used to [[explain]] or [[clarify]] a statement by either ([[exhaustively]]) listing options or by [[rephrasing]] the previous statement.
