--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-(1520) From {{term|beauty}} + {{etyl|gem}} {{term|-ful||full of}}. Displaced earlier {{en}} ''[[sheen]]'' "beautiful" (from {{enm}} ''[[schene#Middle English|schene]]'' "beautiful", from {{ang}} ''[[sciene#Old English|scīene]]'' "beautiful"), {{enm}} ''[[wliti#Middle English|wliti]]'' "beautiful", from {{ang}} ''[[wlitig#Old English|wlitiġ]]'' "beautiful".
+(1520) From {{term|beauty}} + {{etyl|gem}} {{term|-ful||full of}}. Displaced earlier {{etyl|en|-}} ''[[sheen]]'' "beautiful" (from {{etyl|enm|-}} ''[[schene#Middle English|schene]]'' "beautiful", from {{etyl|ang|-}} ''[[sciene#Old English|scīene]]'' "beautiful"), {{etyl|enm|-}} ''[[wliti#Middle English|wliti]]'' "beautiful", from {{etyl|ang|-}} ''[[wlitig#Old English|wlitiġ]]'' "beautiful".
 
 ===Pronunciation===
 * {{enPR|byo͞oʹtĭ-fəl}}, {{IPA|/ˈbjuːtɪfəl/}}, {{SAMPA|/"bju:tIf@l/}}
@@ -60,10 +60,10 @@
 * Belarusian: {{t|be|выдатны|tr=vydátny|xs=Belarusian}}
 * [[Breton]]: [[brav]], [[kaer]]
 * Bulgarian: {{t+|bg|красив|tr=krasív}}, {{t+|bg|прекрасен|tr=prekrásen}}
-* [[Catalan]]: [[bell]], [[formós]],  {{t+|ca|bonic|m}},  {{t|ca|bonica|f}}
+* [[Catalan]]: [[bell]], [[formós]], {{t+|ca|bonic|m}}, {{t|ca|bonica|f}}
 * [[Chamicuro]]: {{tø|ccc|pya'c̈homa}}, {{tø|ccc|pewa puti'na}}
 * Chinese:
-*: Mandarin: {{t-|cmn|漂亮|tr=piàoliang|sc=Hani}},  {{t-|cmn|美|tr=měi|sc=Hani}},  {{t-|cmn|好看|tr=hǎokàn|sc=Hani}}
+*: Mandarin: {{t-|cmn|漂亮|tr=piàoliang|sc=Hani}}, {{t-|cmn|美|tr=měi|sc=Hani}}, {{t-|cmn|好看|tr=hǎokàn|sc=Hani}}
 * Czech: {{t-|cs|krásný}}
 * Danish: {{t+|da|smuk}}
 * Dutch: {{t+|nl|mooi}}
@@ -78,16 +78,16 @@
 * French: {{t+|fr|beau|m}}, {{t+|fr|belle|f}}
 * German: {{t+|de|schön}}
 * Greek: {{t+|el|ωραίος|m}} (oraíos), {{t+|el|όμορφος|m}} (ómorfos)
-* Hebrew: {{t+|he|יפה|m|tr=yafe}},  {{t+|he|יפה|f|tr=yafa}}
+* Hebrew: {{t+|he|יפה|m|tr=yafe}}, {{t+|he|יפה|f|tr=yafa}}
 * Hindi: {{t-|hi|ख़ूबसूरत|tr=xūbsūrat|xs=Hindi}}, {{t-|hi|सुन्दर|tr=sundar|xs=Hindi}}
-* Hungarian: {{t+|hu|szép}},  {{t+|hu|gyönyörű}}
+* Hungarian: {{t+|hu|szép}}, {{t+|hu|gyönyörű}}
 * Icelandic: {{t+|is|fallegur}}, {{t+|is|fagur}}
 * [[Ido]]: {{t+|io|bela|xs=Ido}}
 * Indonesian: [[indah]], [[cantik]], [[ayu]], [[molek]], [[cakep]]
 * [[Interlingua]]: {{t|ia|belle}}
 * Irish: {{t-|ga|álainn|xs=Irish}}
 * Italian: {{t+|it|bello}}
-* Japanese: {{t+|ja|美しい|tr=うつくしい, utsukushii}},  {{t-|ja|綺麗}},  {{t-|ja|きれい|tr=kirei}},  {{t+|ja|素敵|tr=すてき, suteki}}
+* Japanese: {{t+|ja|美しい|tr=うつくしい, utsukushii}}, {{t-|ja|綺麗}}, {{t-|ja|きれい|tr=kirei}}, {{t+|ja|素敵|tr=すてき, suteki}}
 {{trans-mid}}
 * [[Khmer]]: {{Khmr|[[ស្អាត]]}} (saāt), {{t-|km|ល្អ|tr=l'ɑɑ|sc=Khmr|xs=Khmer}}
 * Korean: {{qualifier|attributive}} {{t|ko|아름다운|tr=areumdaun|sc=Kore}}, {{qualifier|predicative}} {{t|ko|아름답다|tr=areumdapda|sc=Kore}}
@@ -95,7 +95,7 @@
 * Latin: {{t-|la|pulcher}}, {{t-|la|formosus|m}}, {{t+|la|bellus|m}}
 * [[Limburgish]]: {{t-|li|sjoen|xs=Limburgish}}
 * [[Lojban]]: {{t-|jbo|melbi|xs=Lojban}}
-* [[Macedonian]]: {{t|mk|убав|m|tr=úbav}},  {{t|mk|убава|f|tr=úbava}},  {{t|mk|убаво|n|tr=úbavo}},  {{t-|mk|прекрасен|m|tr=prékrasen}},  {{t|mk|прекрасна|f|tr=prékrasna}},  {{t|mk|прекрасно|n|tr=prékrasno}}
+* [[Macedonian]]: {{t|mk|убав|m|tr=úbav}}, {{t|mk|убава|f|tr=úbava}}, {{t|mk|убаво|n|tr=úbavo}}, {{t-|mk|прекрасен|m|tr=prékrasen}}, {{t|mk|прекрасна|f|tr=prékrasna}}, {{t|mk|прекрасно|n|tr=prékrasno}}
 * Navajo: {{tø|nv|nizhóní}}
 * [[Novial]]: [[beli]]
 * [[Old Church Slavonic]]: {{tø|cu|красьнъ|tr=krasĭnŭ|sc=Cyrs}}
@@ -111,7 +111,7 @@
 * [[Scottish Gaelic]]: [[àlainn]], [[bòidheach]], [[brèagha]], [[fèilleil]], [[grinn]], [[maiseach]], [[rìomhach]], [[sgèimheach]]
 * Slovak: {{t-|sk|krásny}}
 * Slovene: {{t+|sl|lep}}
-* Spanish: {{t-|es|hermoso}}, {{t+|es|bello}}, {{t+|es|lindo}},  {{t-|es|guapo}},  {{t+|es|bonito}}
+* Spanish: {{t-|es|hermoso}}, {{t+|es|bello}}, {{t+|es|lindo}}, {{t-|es|guapo}}, {{t+|es|bonito}}
 * Swedish: {{t+|sv|fin}}, {{t+|sv|vacker}}
 * [[Tajik]]: {{t|tg|зебо|tr=zebo|sc=Cyrl|xs=Tajik}}
 * [[Tamil]]: [[அழகிய]] (azhagiya)
@@ -119,11 +119,11 @@
 * Thai: {{t-|th|สุนทร|tr=sŭnton}}, {{t|th|สวย|tr=sŭay|sc=Thai}}, {{t|th|งาม|tr=ngaam|sc=Thai}}
 * [[Tswana]]: {{t-|tn|-ntle|xs=Tswana}}
 * Turkish: {{t+|tr|güzel}}
-* Ukrainian: {{t|uk|вродливий|tr=vrodlývyj|xs=Ukrainian}},  {{t|uk|красивий|tr=krasývyj|xs=Ukrainian}}
+* Ukrainian: {{t|uk|вродливий|tr=vrodlývyj|xs=Ukrainian}}, {{t|uk|красивий|tr=krasývyj|xs=Ukrainian}}
 * Urdu: {{t-|ur|خوبصورت|tr=xūbsūrat|xs=Urdu}}, {{t-|ur|سندر|tr=sundar|xs=Urdu}}
-* Vietnamese: {{t|vi|đẹp đẽ|xs=Vietnamese}},  {{t+|vi|tốt|xs=Vietnamese}},  {{t|vi|tốt đẹp|xs=Vietnamese}}, {{t|vi|đẹp}}
+* Vietnamese: {{t|vi|đẹp đẽ|xs=Vietnamese}}, {{t+|vi|tốt|xs=Vietnamese}}, {{t|vi|tốt đẹp|xs=Vietnamese}}, {{t|vi|đẹp}}
 * [[Volapük]]: {{t|vo|jönik}}
-* Welsh: {{t|cy|hardd|xs=Welsh}},  {{t|cy|prydferth|xs=Welsh}}
+* Welsh: {{t|cy|hardd|xs=Welsh}}, {{t|cy|prydferth|xs=Welsh}}
 * [[West Frisian]]: [[moai]], [[kreas]]
 {{trans-bottom}}
 
@@ -133,7 +133,7 @@
 * Dutch: {{t+|nl|mooi}}
 * Finnish: {{t+|fi|kaunis}}
 * French: {{t+|fr|beau|m}}
-* German: {{t+|de|heiter}},  {{t+|de|schön}}
+* German: {{t+|de|heiter}}, {{t+|de|schön}}
 * Hebrew: [[נאה]] (na'e)
 * Hungarian: {{t+|hu|szép}}
 {{trans-mid}}
@@ -141,7 +141,7 @@
 * Kurdish: {{ku-Arab|[[خۆش]]}}, {{ku-Arab|[[فێنک]]}}
 * [[Limburgish]]: {{t-|li|sjoen|xs=Limburgish}}
 * [[Macedonian]]: {{t|mk|убаво|n|tr=úbavo}}
-* Spanish: {{t+|es|bueno}},  {{t+|es|despejado}},  {{t-|es|alegre}}
+* Spanish: {{t+|es|bueno}}, {{t+|es|despejado}}, {{t-|es|alegre}}
 * Swedish: {{t+|sv|fint|n}}, {{t+|sv|vackert|n}}
 * [[Tamil]]: [[அழகிய]] (azhagiya)
 * [[Telugu]]: [[ఆహ్లాదకరమైన]]
@@ -162,7 +162,7 @@
 
 {{trans-top|ironic: how unfortunate}}
 * Finnish: {{t+|fi|loistava}}
-* German: {{t+|de|toll}},  {{t+|de|schön}}
+* German: {{t+|de|toll}}, {{t+|de|schön}}
 {{trans-mid}}
 * Hungarian: {{t+|hu|szép}}
 * [[Macedonian]]: {{t|mk|убаво|tr=úbavo}}
