--- a/en/昜/昜.16964.wikitext
+++ b/en/昜/昜.16964.wikitext
@@ -10,7 +10,7 @@
 # to open out, to expand
 # [[bright]], [[glorious]]
 
-====Descendants====
+====Derived characters====
 * [[陽]], [[踼]], [[湯]], [[揚]], [[場]], [[腸]], [[𥯕]], [[暘]], [[煬]], [[禓]], [[𥏫]], [[楊]], [[玚]], [[𦳝]], [[瘍]], [[崵]], [[碭]], [[䵮]], [[颺]], [[愓]], [[畼]], [[餳]], [[暢]], [[鍚]]
 * [[傷]], [[觴]], [[殤]] {{qualifier|via variant}}
 
