--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -4,8 +4,8 @@
 {{etyl|enm}} {{term|souken|souken, suken||lang=enm}} from {{etyl|ang}} {{term|sucan|sūcan|to suck|lang=ang}} from {{proto|Germanic|sūganan||sūkanan|to suck|lang=en}} from {{proto|Indo-European|seug-||sug-||suk-||lang=en}}. Akin to {{ang}} {{term|sugan|sūgan||lang=ang}} "to suck", {{etyl|goh|-}} {{term|sugan|sūgan||lang=goh}} "to suck" ({{etyl|de|-}} {{term|saugen|saugen||lang=de}}), {{ang}} {{term|socian|socian||lang=ang}} "to cause to suck up, soak". More at [[soak]].
 
 ===Pronunciation===
+* {{IPA|/sʌk/}}
 * {{audio|en-us-suck.ogg|Audio (US)}}
-
 *: {{rhymes|ʌk}}
 
 ===Verb===
