t+fr:[[devenir]] ([[WT:EDIT|Assisted]]) <come#12718943>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -178,6 +178,7 @@ Examples exist in plays by Chicagoan {{w|David Mamet}}, such as ''{{w|American B
 
 {{trans-top|to become}}
 * Bulgarian: {{t|bg|случвам се}},  {{t|bg|ставам}}
+* French: {{t|fr|devenir}}
 * Vietnamese: {{t+|vi|thành|xs=Vietnamese}}, {{t+|vi|trở nên|xs=Vietnamese}}, {{t+|vi|trở thành|xs=Vietnamese}}
 {{trans-mid}}
 {{trans-bottom}}
