--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -131,6 +131,7 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 * Italian: {{t+|it|taglio|m}}, {{t+|it|incisione|f}}
 * Kurdish: {{t+|ku|برین|sc=ku-Arab}}
 * Portuguese: {{t+|pt|corte|m}}
+* Romanian: {{t|ro|tăietură|f}}
 * Swedish: {{t+|sv|skärsår|n}}
 * Turkish: {{t|tr|kesik}}
 {{trans-bottom}}
