--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -160,6 +160,7 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 {{trans-mid}}
 * Italian: {{t+|it|taglio|m}}
 * Portuguese: {{t+|pt|corte|m}}
+* Romanian: {{t|ro|tăietură|f}}
 * Swedish: {{t+|sv|snitt|n}}
 {{trans-bottom}}
 
