--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -179,6 +179,7 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 * German: {{t+|de|abheben}}, {{t+|de|schneiden}}
 {{trans-mid}}
 * Italian: {{t+|it|alzata|f}}
+* Romanian: {{t|ro|tăiere|f}}
 * Swedish: {{t+|sv|giv|c}}
 * Turkish: {{t+|tr|kesmek}}
 {{trans-bottom}}
