rm. US-centric POV <et cetera#12728454>

--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Alternative forms===
-* '''[[&c]]''', '''[[&c.]]''' {{chiefly|archaic}}
+* '''[[&c]]''', '''[[&c.]]'''
 * '''[[& cetera]]'''
 * '''[[etc]], '''[[etc.]]'''
 * '''[[etcetera]]'''
@@ -23,7 +23,7 @@ From {{etyl|la|en}} {{term|et cetera|et cētera|lang=la|and the rest" or "and so
 #: ''The plagiarism was painfully obvious: "It was the best of times, it was the worst of times," '''etc.'''''
 
 ====Usage notes====
-* Abbreviated as [[etc.]]; formerly also as [[&c.]].
+* Abbreviated as [[etc.]]; also as [[&c.]].
 
 ====Synonyms====
 * {{sense|to complete a list}} [[et al.]]
