t+tr:[[liman]] ([[WT:EDIT|Assisted]]) <port#12739603>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -208,6 +208,7 @@ From {{etyl|fro}} {{term|porter|lang=fr}} < {{etyl|la}} {{term|portare||carry|la
 {{trans-mid}}
 * Swahili: {{t|sw|mabandari|xs=Swahili}}
 * Swedish: {{t-|sv|portera}}, {{t+|sv|porta}}
+* Turkish: {{t|tr|liman}}
 {{trans-bottom}}
 
 ====Noun====
