--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -95,6 +95,7 @@ From {{etyl|enm}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term|brycg|la
 * Icelandic: {{t+|is|brú|f}}
 * [[Ido]]: [[ponto]]
 * Indonesian: {{t|id|jembatan|xs=Indonesian}}
+* [[Interlingua]]: {{t|ia|ponte}}
 * Irish: [[droichead]]
 * Italian: {{t+|it|ponte|m}}
 * Japanese: {{t|ja|橋|tr=はし, hashi|sc=Jpan}}
