--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -83,7 +83,7 @@ Recorded since 1416, from {{etyl|fro}} [[briche]], probably from a Germanic sour
 * Irish: {{t|ga|bríce|m}}
 * Italian: {{t+|it|mattone}}
 {{trans-mid}}
-* Japanese: {{t|ja|煉瓦|tr=れんが renga}}
+* Japanese: {{t|ja|煉瓦|tr=れんが renga}}, {{t|ja|れんが|tr=renga|sc=Jpan}}
 * Kurdish:
 *: Sorani: {{t-|ku|خشت|tr=xisht|sc=ku-Arab}}
 * Latin: {{t-|la|later|m}}
@@ -93,6 +93,7 @@ Recorded since 1416, from {{etyl|fro}} [[briche]], probably from a Germanic sour
 * Malay: {{t-|ms|batu bata|xs=Malay}}
 * Norwegian: {{t|no|murstein}}
 * [[Occitan]]: {{t-|oc|brica|f|xs=Occitan}}
+* Persian: {{t|fa|آجر|tr=âjor|sc=fa-Arab}}
 * Polish: {{t+|pl|cegła}}
 * Portuguese: {{t+|pt|tijolo}}
 * [[Quechua]]: {{t-|qu|kusasqa tika|xs=Quechua}}
@@ -106,7 +107,7 @@ Recorded since 1416, from {{etyl|fro}} [[briche]], probably from a Germanic sour
 * Spanish: {{t+|es|ladrillo|m}}
 * Swedish: {{t+|sv|tegel|n}}, {{t|sv|tegelsten}}
 * [[Tamil]]: [[செங்கல்]]
-* Thai: [[อิฐ]]
+* Thai: [[อิฐ]], {{t|th|อิฐ|tr=ìt|sc=Thai}}
 * Turkish: {{t+|tr|tuğla}}
 * Vietnamese: {{t+|vi|gạch|xs=Vietnamese}}
 * [[Volapük]]: {{t|vo|bakaston}}
