--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -55,14 +55,14 @@ Recorded since 1416, from {{etyl|fro}} [[briche]], probably from a Germanic sour
 {{trans-top|hardened block used for building}}
 * [[Afrikaans]]: {{t-|af|baksteen|xs=Afrikaans}}
 * [[Akkadian]]: {{tø|akk|𒋞|tr=libittu, SIG<sub>4</sub>|sc=Xsux}}
-* Arabic: {{t|ar|طوبة|f|tr=Tūba}},  {{t|ar|لبنة|f|tr=lábina}}
+* Arabic: {{t|ar|طوبة|f|tr=Tuuba}},  {{t|ar|لبنة|f|tr=lábina}}
 * Armenian: {{t-|hy|աղյուս|tr=aġyus}}
 * [[Basque]]: [[adreilu]]
 * Bosnian: {{t-|bs|cigla|f}}
 * Bulgarian: {{t+|bg|тухла}}
 * [[Catalan]]: [[maó]]
 * Chinese:
-*: Mandarin: {{t|cmn|磚塊|sc=Hani}},  {{t|cmn|砖块|tr=zhuānkuài|sc=Hani}}
+*: Mandarin: {{t|cmn|磚塊|sc=Hani}},  {{t|cmn|砖块|tr=zhuānkuài|sc=Hani}}, {{t|cmn|磚頭|sc=Hani}},  {{t|cmn|砖头|tr=zhuāntóu|sc=Hani}}
 * Croatian: {{t-|hr|cigla|f}}
 * Czech: {{t-|cs|cihla|f}}
 * Danish: {{t|da|mursten|c}}
@@ -83,7 +83,7 @@ Recorded since 1416, from {{etyl|fro}} [[briche]], probably from a Germanic sour
 * Irish: {{t|ga|bríce|m}}
 * Italian: {{t+|it|mattone}}
 {{trans-mid}}
-* Japanese: {{t|ja|煉瓦|tr=れんが renga}}, {{t|ja|れんが|tr=renga|sc=Jpan}}
+* Japanese: {{t|ja|煉瓦|tr=れんが, renga}}, {{t|ja|れんが|tr=renga|sc=Jpan}}
 * Kurdish:
 *: Sorani: {{t-|ku|خشت|tr=xisht|sc=ku-Arab}}
 * Latin: {{t-|la|later|m}}
@@ -107,7 +107,7 @@ Recorded since 1416, from {{etyl|fro}} [[briche]], probably from a Germanic sour
 * Spanish: {{t+|es|ladrillo|m}}
 * Swedish: {{t+|sv|tegel|n}}, {{t|sv|tegelsten}}
 * [[Tamil]]: [[செங்கல்]]
-* Thai: [[อิฐ]], {{t|th|อิฐ|tr=ìt|sc=Thai}}
+* Thai: {{t|th|อิฐ|tr=ìt|sc=Thai}}
 * Turkish: {{t+|tr|tuğla}}
 * Vietnamese: {{t+|vi|gạch|xs=Vietnamese}}
 * [[Volapük]]: {{t|vo|bakaston}}
@@ -118,6 +118,8 @@ Recorded since 1416, from {{etyl|fro}} [[briche]], probably from a Germanic sour
 * [[Afrikaans]]: {{t-|af|baksteen|xs=Afrikaans}}
 * Armenian: {{t-|hy|աղյուս|tr=aġyus}}
 * Bulgarian: {{t|bg|тухли|p}}
+* Chinese:
+*: Mandarin: {{t|cmn|磚塊|sc=Hani}},  {{t|cmn|砖块|tr=zhuānkuài|sc=Hani}}, {{t|cmn|磚頭|sc=Hani}},  {{t|cmn|砖头|tr=zhuāntóu|sc=Hani}}
 * Danish: {{t|da|mursten|c}}
 * Dutch: {{t+|nl|baksteen}}, {{t-|nl|bakstenen}}
 * Finnish: {{t+|fi|tiili}}
@@ -132,7 +134,6 @@ Recorded since 1416, from {{etyl|fro}} [[briche]], probably from a Germanic sour
 * Slovene: {{t+|sl|opeka}}
 * Spanish: {{t+|es|ladrillo|m}}
 * Swedish: {{t+|sv|tegel|n}}
-* {{ttbc|zh}}: [[磚塊]], [[砖块]] (zhuān kuài), [[磚頭]], [[砖头]] (zhuān tóu)
 {{trans-bottom}}
 
 {{trans-top|term for a helpful, reliable person}}
