--- a/en/圳/圳.12981.wikitext
+++ b/en/圳/圳.12981.wikitext
@@ -4,6 +4,7 @@
 {{Han char|rn=32|rad=土|as=03|sn=6|four=4210<sub>0</sub>|canj=土中中中 (GLLL)}}
 
 # furrow in field, small drainage
+# drainage in field, brook beside field
 
 ====References====
 * {{Han ref|kx=0224.150|dkj=04894|dj=0458.020|hdz=10420.030|uh=5733|ud=22323|bh=A660|bd=42592}}
