--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -248,7 +248,7 @@ Name of an older card game ''biritch'', probably {{etyl|ru}} - OED, or probably 
 ====Noun====
 {{en-noun|-}}
 
-# {{card games}} A [[card game]] played normally with four players playing as two teams of two players each.
+# {{card games}} A [[card game]] played with four players playing as two teams of two players each.
 #: ''Bidding is an essential element of the game "'''Bridge'''".''
 
 =====Translations=====
